samples/_failures_safe/1761278743_6fe68f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f95e5b0.c: In function ‘main’:
./samples/SAFE/__tmp_9f95e5b0.c:168:9: error: expected declaration or statement at end of input
  168 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9f95e5b0.c:168:9: error: expected declaration or statement at end of input
